Fixed overflow on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ html, body {
 .body-container {
   margin: 0 auto;
   padding: 0 15px;
-  width: 100%;
+  max-width: 100%;
 }
 
 body h1, h2, h3, h4, h5, h6 {
